[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player_light.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player/player_mesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player/camera_target.gd" type="Script" id=4]
[ext_resource path="res://assets/SoundFX/dash_v2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/SoundFX/eat_light.wav" type="AudioStream" id=6]

[sub_resource type="SphereShape" id=6]

[sub_resource type="Curve" id=9]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 7.0, 0, 1, Vector2( 0.142857, 1 ), 1.17895, 1.17895, 0, 0, Vector2( 1, 2 ), 1.16667, 0.0, 1, 0 ]

[sub_resource type="SpatialMaterial" id=7]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 0.01
height = 0.02

[node name="Player" type="KinematicBody"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
script = ExtResource( 1 )

[node name="blobMeshInstance" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="CameraTarget" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )
script = ExtResource( 4 )

[node name="SpringArm" type="SpringArm" parent="CameraTarget"]
spring_length = 4.0

[node name="Camera" type="Camera" parent="CameraTarget/SpringArm"]
transform = Transform( 1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0 )
far = 1000.0

[node name="Tween" type="Tween" parent="CameraTarget"]

[node name="PlayerLight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0347508, 0.0409084, -0.0473249 )
light_intensity_curve = SubResource( 9 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DashParticles" type="CPUParticles" parent="."]
emitting = false
amount = 15
lifetime = 0.4
explosiveness = 0.4
local_coords = false
mesh = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 0.8
direction = Vector3( 0, 0, 1 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
linear_accel = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="DashStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="EatLightSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
